Версия ПО 0.30.3 (1.0.1/2.0.0) * ДОБАВЛЕН КОНТРОЛЬ НАПРЯЖЕНИЯ АКБ *
1) otherlib:
* Доделаны функции работы с АЦП;
* Настройки тактирования АЦП из InitCLK перенес в соответствующую функцию
ADCinit;

2) Добавлен модуль filters:
Предоставляет алгоритмы фильтрации аналовых сигналов
в 3х вариантах экспоненциальное и простое скользящее среднее, и медианный
фильтр;

3) Добален модуль analog_io:
* Подобно discrete_io содержит функции работы с аналоговыми входами выходами
(в текущей реализации используется только один аналоговый вход (АЦП),
но функционал теперь может быть расширен);
* Благодаря модулю filters можно легко подключать/отключать програмные
фильтры на используемые аналоговые входы прямо в analog.h (но функционал должен
быть описан);

4) bup_data_store:
* Добавилось место для хранения величины напряжения на АКБ;

5) SelfTesting:
* Добавлена функция, флаг контроля уровня напряжения; В функции
выполняется так же заполнение соответствующего поля в хранилище;
* Контроль уровня напряжения АКБ включен в сборку тестов,
флагов решения об индикации;
* Так же в решение об Индикации теперь включен и СВС;

6) task_manager:
* Контроль уровня напряжения на АКБ добавлен в задачу самодиагностики;

7) main.c:
* Добавлена инициализация АЦП.

--- a/BUP.uvprojx
+++ b/BUP.uvprojx
@@ -611,6 +611,16 @@
               <FileType>1</FileType>
               <FilePath>.\CustomDrivers\SWS.c</FilePath>
             </File>
+            <File>
+              <FileName>analog_io.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\CustomDrivers\analog_io.c</FilePath>
+            </File>
+            <File>
+              <FileName>filters.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\CustomDrivers\filters.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
