Доработки предыдущего коммита
1) debug
*  добавлено описание модуля в header;
* реализован таймаут по времени;

2) otherlib
* добавлено описание модуля;
* изменено название функции Timer_SetInterruptPeriod  на Timer_init;

3) ZPZ
* изменения из-за переименования функции;

4) M_Model
* изменения из-за переименования функции;

--- a/BUP.uvprojx
+++ b/BUP.uvprojx
@@ -621,6 +621,11 @@
               <FileType>1</FileType>
               <FilePath>.\CustomDrivers\filters.c</FilePath>
             </File>
+            <File>
+              <FileName>bup_board.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\bup_board.h</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
