Добавлен модуль поддержки платы
Данный модуль позволяет гибко настраивать конфигурацию плату, расширять, изменять распиновку;
Однако, его интеграция в проект заставила адаптировать все ранее написанные модули;

1) bupboard:
* все настройки относящиеся к плате и конфигурации вынесены в данный файл;
* реализован новый тип для удобного конфигурирования пинов;

2) ZPZ:
* вернул функцию обработки прерывания модулю irq, однако, чтобы иметь из него доступ к сокрытым членам модуля ZPZ
сделал для ZPZ функцию-болванку, которую просто расместил в обработчике прерывания в irq.
таким образом и функция обработчик на должном месте и решена проблема доступа к сокрытым членам модуля;
* изменения связанные с добавлением модуля конфигурации платы;
*  функция конфигурации пинов добавлена в функцию инициализации, таким образом, при инициализации модуля достаточно вызвать только init-функцию;
Примечание:
* вероятно, конфигурацию пинов нужно сделать static;

3) otherlib:
* сделал для модуля функцию-болванку, которую просто расместил в обработчике прерывания в irq.
таким образом и функция обработчик на должном месте и решена проблема доступа к сокрытым членам модуля;
* Pin_init была переписана под bupboard;
* добавлены функции-обёртки для установки/сброса/чтения пинов;
* добавлена фунция конфигурации пина в состояние по-умолчанию (фактически сброса конфигурации);
* из инициализации АЦП была вынесена конфигурация пинов;

4) 1636HH52Y, 25Q64FV, BIM, SNS, SWS, discrete_io, analog_io
* изменения под bupboard и новые функции обёртки из otherlib;
*  функция конфигурации пинов добавлена в функцию инициализации, таким образом, при инициализации модуля достаточно вызвать только init-функцию;
Примечание:
* вероятно, конфигурацию пинов нужно сделать static;

5) M_Model
* очистил от мусора оставшегося с прошлых версий за ненадобностью;

6) analog_io
* пока убрал инициализацию резервных каналов;
* инициализация аналоговых пинов вынесенная из ADC_init в otherlib теперь здесь;
* она же инициализирует и А

--- a/BUP.uvprojx
+++ b/BUP.uvprojx
@@ -622,9 +622,9 @@
               <FilePath>.\CustomDrivers\filters.c</FilePath>
             </File>
             <File>
-              <FileName>bup_board.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>.\bup_board.h</FilePath>
+              <FileName>bupboard.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\CustomDrivers\bupboard.c</FilePath>
             </File>
           </Files>
         </Group>
