--- a/BUP.uvprojx
+++ b/BUP.uvprojx
@@ -561,6 +561,11 @@
               <FileType>1</FileType>
               <FilePath>.\HeightMap\Heightmap_conf_and_pd.c</FilePath>
             </File>
+            <File>
+              <FileName>map_flash_layout.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\HeightMap\map_flash_layout.h</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
