--- a/BUP.uvprojx
+++ b/BUP.uvprojx
@@ -14,7 +14,7 @@
         <TargetCommonOption>
           <Device>MDR1986BE93</Device>
           <Vendor>Milandr</Vendor>
-          <PackID>Keil.MDR1986BExx.1.51</PackID>
+          <PackID>Keil.MDR1986BExx.1.5.3</PackID>
           <PackURL>http://www.keil.com/pack/</PackURL>
           <Cpu>IROM(0x08000000,0x20000) IRAM(0x20000000,0x8000) CPUTYPE("Cortex-M3") CLOCK(12000000) ELITTLE</Cpu>
           <FlashUtilSpec></FlashUtilSpec>
@@ -748,10 +748,12 @@
         <targetInfos/>
       </file>
       <file attr="config" category="header" name="Config\MDR32F9Qx_config.h">
-        <instance index="0" removed="1">RTE\Device\MDR1986BE93\MDR32F9Qx_config.h</instance>
+        <instance index="0">RTE\Device\MDR1986BE93\MDR32F9Qx_config.h</instance>
         <component Cclass="Device" Cgroup="Startup" Cvendor="Keil" Cversion="1.5" condition="CON_MDR1986BE9x"/>
         <package name="MDR1986BExx" schemaVersion="1.3" url="http://www.keil.com/pack/" vendor="Keil" version="1.5.3"/>
-        <targetInfos/>
+        <targetInfos>
+          <targetInfo name="bupTarget"/>
+        </targetInfos>
       </file>
       <file attr="config" category="source" name="Libraries\CMSIS\CM3\DeviceSupport\MDR32F9Qx\startup\arm\startup_MDR32F9Qx.s">
         <instance index="0">RTE\Device\MDR1986BE93\startup_MDR32F9Qx.s</instance>
